<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Microblog</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_microblog_acticity">NewMicroblogActicity</string>
    <string name="title_new_microblog">发表新微博</string>
    <string name="confirm_publish">确认发表</string>
    <string name="back">返 回</string>
    <string name="add">添 加</string>
    <string name="grid">图标</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="user_hint">QQ号码/手机/邮箱</string>
    <string name="password_hint">密码</string>
    <string name="regist">注册账号</string>
    <string name="find">找回密码</string>
    <string name="remember">记住密码</string>
    <string name="login">自动登录</string>
    <string name="desc">gagaga</string>
    <string name="submit">登陆</string>
    <string name="repassword_hint">重新输入密码</string>
    <string name="confirm_register">确认注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="defalut_name">延毕毕</string>
    <string name="tweet_message">感觉我爱上我室友了！</string>
    <string name="home_page">主页</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_repost">Repost</string>
    <string name="modify_pwd_old_hint">请输入旧密码</string>
    <string name="modify_pwd_new_hint">请输入新密码</string>
    <string name="modify_pwd_repassword_hint">请再次输入新密码</string>
    <string name="modify_pwd_confirm_register">确认修改</string>
    <string name="title_activity_modify_microblog">ModifyMicroblog</string>
    <string name="title_activity_show_comment">ShowCommentActivity</string>
    <string name="title_activity_friends_search">FriendsSearchActivity</string>

</resources>
