<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFCFB"
    tools:context=".LoginActivity" >    
    <include layout="@layout/head"/>
    <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@id/register_head"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/desc"
        android:src="@drawable/headpic_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@id/modify_pwd_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"                
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@id/modify_pwd_old"
                android:layout_width="204dp"
                android:layout_height="40.5dip"
                android:layout_marginTop="10dp"
                android:background="@drawable/txt_sharp" 
                android:ems="10"
                android:hint="@string/modify_pwd_old_hint"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="14dip" 
                android:gravity="center"/>


            <EditText
                android:id="@id/register_password"
                android:layout_width="204dp"
                android:layout_height="40.5dip"
                android:layout_marginTop="10dp"
                android:background="@drawable/txt_sharp" 
                android:hint="@string/modify_pwd_new_hint"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="14dip"
                android:gravity="center" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@id/modify_pwd_confirm_new"
                android:layout_width="204dp"
                android:layout_height="40.5dip"
                android:layout_marginTop="10dp"
                android:background="@drawable/txt_sharp" 
                android:hint="@string/modify_pwd_repassword_hint"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="14dip"
                android:gravity="center" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@id/modify_pwd_confirm_btn"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginBottom="63dp"
                android:layout_marginTop="30dp"
                android:background="#ff0079ff"
                android:gravity="center"
                android:height="45.0dip"
                android:text="@string/modify_pwd_confirm_register"
                android:textColor="#ffffffff"
                android:textSize="19.0sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
