<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFCFB"
    tools:context=".LoginActivity" >    

    <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@id/login_head"
        android:layout_width="121dp"
        android:layout_height="127dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/desc"
        android:src="@drawable/headpic_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >         

            <EditText
                android:id="@id/login_username"
                android:layout_width="204dp"
                android:layout_height="40.5dip"
                android:layout_marginTop="10dp"
                android:background="@drawable/txt_sharp"
                android:hint="@string/user_hint"
                android:inputType="text"
                android:textColor="@color/grid_item_text_black"
                android:textSize="16sp"
                android:gravity="center"/>
          
            <EditText
                android:id="@id/login_password"
                android:layout_width="204dp"
                android:layout_height="40.5dip"
                android:layout_marginTop="10dp"
                android:background="@drawable/txt_sharp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/grid_item_text_black"
                android:textSize="14sp"
                android:gravity="center" >

                <requestFocus />
            </EditText>


            <Button
                android:id="@id/loginbutton"
                android:layout_width="126dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:background="@drawable/login_button"
                android:cropToPadding="false" />

            <TextView
                android:id="@id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/regist"
                android:textColor="#2200C1" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
